[package]
name = "louds-rs"
version = "0.5.0"
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
description = "High performance LOUDS (Level-Order Unary Degree Sequence) library"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/laysakura/louds-rs"
homepage = "https://github.com/laysakura/louds-rs"
keywords = ["louds", "succinct"] # up to 5 keywords, each keyword should have <= 20 chars
categories = ["compression", "data-structures"]
edition = "2018"

[dependencies]
# As soon as the newer version is made available, we should switch to it here
# and add support for enabling/disabling the rayon and serde features. For the
# time being, we switch to the git repository.
# fid-rs = "0.1"
fid-rs = { git = "https://github.com/LucaCappelletti94/fid-rs", branch = "master", no-default-features = true }
serde = { version = "1.0", features = ["derive"], optional = true }
mem_dbg = {version = "0.1.4", optional = true}

[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "bench"
harness = false

[package.metadata.release]
tag-prefix = "v"

[features]
serde = ["fid-rs/serde", "dep:serde"]
rayon = ["fid-rs/rayon"]
mem_dbg = ["dep:mem_dbg", "fid-rs/mem_dbg"]