[package]
name = "louds-rs"
version = "0.5.0"
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
description = "High performance LOUDS (Level-Order Unary Degree Sequence) library"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/laysakura/louds-rs"
homepage = "https://github.com/laysakura/louds-rs"
keywords = ["louds", "succinct"] # up to 5 keywords, each keyword should have <= 20 chars
categories = ["compression", "data-structures"]
edition = "2018"

[dependencies]
fid-rs = "0.2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
mem_dbg = {version = "0.1.4", optional = true}

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[features]
serde = ["fid-rs/serde", "dep:serde"]
rayon = ["fid-rs/rayon"]
mem_dbg = ["dep:mem_dbg", "fid-rs/mem_dbg"]

[[bench]]
name = "bench"
harness = false
